<resources>
    <string name="app_name">保利管+</string>

    <string name="press_again_to_exit">再按一次退出</string>

    <string name="scoll_aware_fab_behavior">.view.ScollAwareFABBehavior</string>
    <string name="welcome_tips">欢迎使用保利管道试压服务系统</string>
    <string name="swipe_down_to_refresh">暂无数据~</string>
    <string name="tab_home">首页</string>
    <string name="tab_goods">好货</string>
    <string name="tab_car">购物车</string>
    <string name="tab_mine">我的</string>


    <string name="hot_search_keyword">热门搜索</string>
    <string name="search_hostory">历史记录</string>
    <string name="authorized">请授权！</string>

    <!-- 搜索 -->
    <string name="hint_search">请输入关键字进行搜索</string>
    <string name="tips_search_keywords_cannot_be_empty">搜索关键字不能为空</string>

    <!-- permission check-->
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="network_unavailable">没有网络哦</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_order_all">查看全部订单</string>
    <string name="nopayment">待支付</string>
    <string name="all_order">全部订单</string>
    <string name="no_jd">待接单</string>
    <string name="yes_jd">已接单</string>
    <string name="yes_use">已使用</string>
    <string name="black_pay">退款</string>
    <string name="noevaluate">待评价</string>
    <string name="customer">售后</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="login_forget">如忘记密码？请致电400-820-8717</string>
    <string name="sure">确定</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="pwd_length_no">密码长度有误</string>
    <string name="input_pwd_two">请确认密码</string>
    <string name="new_twopwd_defrevent">两次输入密码不一致</string>
    <string name="pwd_need_numorword">密码至少要有一位字母和数字</string>
    <string name="delete_sure">你确定要删除此消息吗?</string>
    <string name="tab_sign">签到</string>
    <string name="tab_sign_record">记录</string>
    <string name="sign">签到</string>
    <string name="deleted">此单据已删除！</string>
    <string name="please_change_pwd">您的登录密码为初始密码，请您尽快修改！</string>
    <string name="base_info">基本信息</string>
    <string name="order_no">单据编号</string>
    <string name="order_user">制单人</string>
    <string name="where_post">所在岗位</string>
    <string name="where_department">所在部门</string>
    <string name="order_state">审批状态</string>
    <string name="order_create_time">制单日期</string>
    <string name="more">更多</string>
    <string name="sign_record">签到记录</string>
    <string name="filter">筛选</string>
    <string name="daily_list">日报列表</string>
    <string name="week_list">周报列表</string>
    <string name="week_detail">周报详情</string>
    <string name="month_list">月报列表</string>
    <string name="month_detail">月报详情</string>
    <string name="no_department">暂无下级部门</string>
    <string name="custom_phone">4008208717</string>
    <string name="mall_phone">4006061314</string>
    <string name="permission_camera">App扫码需要用到拍摄权限</string>
    <string name="water_filter_two">第一级、PP5建议使用周期6-12个月.第二级、颗粒活性炭建议使用周期6-12个月.第三级、PP1建议使用周期6-12个月.第四级、RO膜建议使用周期24个月、CR400-K1建议使用周期24-36个月.第五级、后置活性炭建议使用周期12个月.超滤膜建议使用周期6-12个月总净水量约为2000升。具体根据用水量及原水水质情况。</string>
    <string name="water_filter_one">渗透净水机滤芯更换周期</string>
    <string name="water_filter_three">中央净水机滤芯更换周期</string>
    <string name="water_filter_four">活性炭滤料、KDF合金滤料建议使用18-24个月.具体根据用水量及原水水质情况。注：中央净水机2种滤料需同时更换。</string>
    <string name="water_filter_five">软水机滤料更换周期</string>
    <string name="water_filter_six">软化树脂建议使用4-6年。具体根据用水量及原水水质情况。</string>
    <string name="detete_file">文件删除后无法恢复,是否确认删除?</string>
    <string name="is_close_pting_view">测试进行中，是否确认关闭此界面?</string>
    <string name="is_end_pting">正在试压中,是否确认结束?</string>
    <string name="ble_disconnect">蓝牙断开了</string>
    <string name="ble_disconnect_already">连接断开</string>
    <string name="connect_fail">连接失败</string>
    <string name="ble_list">蓝牙列表</string>
    <string name="connecting">连接中...</string>
    <string name="this_notpossible_ble">该蓝牙可能不是试压仪器,是否确认连接?</string>
    <string name="ble">蓝牙打开成功</string>
    <string name="please_up_img">请先上传安装回执单图片！</string>
    <string name="finish_sure">是否确认完成?</string>
    <string name="hava_no_img">还未上传图片</string>
    <string name="sure_accept">是否确认接受此派单?</string>
    <string name="send_message_to_water">是否确认给水工发送消息?</string>
    <string name="please_input_refuse_reason">请输入拒绝原因</string>
    <string name="already_upload">已上传</string>
    <string name="not_upload">未上传</string>
    <string name="pressure_detail">试压单详情</string>
    <string name="commit">提交</string>
    <string name="daily_add">新增日报</string>
    <string name="daily_update">修改日报</string>
    <string name="update_sure">确认修改</string>
    <string name="max_three_img">最多3张</string>
    <string name="please_input_today">请填写今日总结</string>
    <string name="please_input_tomorrow">请填写明日计划</string>
    <string name="no_comment">暂无评议</string>
    <string name="daily_detail">日报详情</string>
    <string name="edit">编辑</string>
    <string name="review">审阅</string>
    <string name="review_replay">审阅回复</string>
    <string name="sure_delete_daily">你确定要删除此日报吗?</string>
    <string name="month_add">新增月报</string>
    <string name="month_update">修改月报</string>
    <string name="max_ten_img">最多10张</string>
    <string name="sure_delete_month">你确定要删除此月报吗?</string>
    <string name="sign_detail">签到详情</string>
    <string name="week_add">新增周报</string>
    <string name="week_update">修改周报</string>
    <string name="sure_delete_week">你确定要删除此周报吗?</string>
    <string name="interview_add">新增区域走访</string>
    <string name="interview_update">修改区域走访</string>
    <string name="sure_delete_order">确定要删除此单据吗?</string>
    <string name="interview_detail">区域走访详情</string>
    <string name="interview_list">区域走访列表</string>
    <string name="summary_add">新增月度总结</string>
    <string name="summary_update">修改月度总结</string>
    <string name="max_five_img">最多5张</string>
    <string name="sure_delete_month_table">你确定要删除月度数量表</string>
    <string name="fix_rightnow">马上修改</string>
    <string name="talk_about_later">稍后再说</string>
    <string name="doc_no">单据编号</string>
    <string name="prepared_by">制单人</string>
    <string name="approval_status">审核状态</string>
    <string name="billing_date">制单日期</string>
    <string name="denial_reason">拒绝原因</string>
    <string name="basic_information">基础信息</string>
    <string name="pressure_test_address">试压地址</string>
    <string name="upload">上传图片</string>
    <string name="choose_type">选择类型</string>
    <string name="sure_delete_class">是否确定删除此图片分类?</string>
    <string name="choose_img_type">选择图片类型</string>
    <string name="pressure_img">试压图片</string>
    <string name="sure_delete_img">是否确定删除此图片?</string>
    <string name="sure_delete_apply">你确定要删除此申请吗?</string>
    <string name="sure_exit">您确定要退出登录吗?</string>
    <string name="updata_now">发现新版本,立即更新?</string>
    <string name="add_new">新增</string>
    <string name="sure_stop_pressure">正在试压中,是否确认结束?</string>
    <string name="sure_delete">确定要删除此申请吗?</string>
    <string name="please_choose_next_audit">请选择下一位审核人</string>

</resources>
