<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/setbar_shadow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doc_no"
            android:textColor="@color/colorTextG3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:textColor="@color/colorTextG6"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepared_by"
            android:textColor="@color/colorTextG3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:textColor="@color/colorTextG6"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStateTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approval_status"
            android:textColor="@color/colorTextG3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:textColor="@color/colorTextG6"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTimeTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_date"
            android:textColor="@color/colorTextG3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:textColor="@color/colorTextG6"
            android:textSize="13sp" />

    </LinearLayout>


</merge>